[package]
name = "pong"
version = "0.1.0"
authors = ["Paul Martensen <paul.martensen@gmx.de>"]
edition = "2018"

[features]
vulkan =  ["amethyst/vulkan"]
default = ["vulkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst_rendy = "*"

[dependencies.amethyst]
version = "0.12"
features = ["vulkan", "nightly"]
